infra/k8s/ingress.yaml
# --- API IngressRoute ---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api-ingressroute
  namespace: core
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`api.core.hubsolidario.com`)
      kind: Rule
      services:
        - name: api
          port: 5001
  tls:
    certResolver: letsencrypt
---
# --- MinIO API IngressRoute ---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-api-ingressroute
  namespace: core
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`s3.core.hubsolidario.com`)
      kind: Rule
      services:
        - name: minio-api
          port: 9000
  tls:
    certResolver: letsencrypt
---
# --- MinIO Console IngressRoute ---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-console-ingressroute
  namespace: core
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`minio-console.core.hubsolidario.com`)
      kind: Rule
      services:
        - name: minio-console
          port: 9001
  tls:
    certResolver: letsencrypt
---
# --- Registry IngressRoute ---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: registry-ingressroute
  namespace: core
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`registry.core.hubsolidario.com`)
      kind: Rule
      services:
        - name: registry
          port: 5000
  tls:
    certResolver: letsencrypt
